src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
mat-expansion-panel-header {
  padding: 8px 24px;
}

mat-panel-title {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  flex-grow: 1;
  flex: 0 1 50;
}

mat-panel-description {
  flex-grow: 0;
}

.title {
  color: var(
    --mat-expansion-header-text-color,
    var(--mat-app-on-surface)
  ); /* Keep the text color, even when disabled */
  font-size: 1.1em;
}

.draft-options {
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
}

.formatting-options-container {
  display: flex;
  column-gap: 16px;

  button {
    flex-shrink: 0;
  }
}

.subtitle,
.training-files {
  font-size: 0.9em;
  color: var(--draft-history-entry-subtitle-color);
}

.status {
  display: flex;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.expand-icon {
  flex-shrink: 0;
}

.training-configuration-link {
  display: flex;
  align-items: center;
}

strong {
  font-weight: 500;
}

.book-buttons {
  display: flex;
  gap: 4px;
}

/* Color classes for the status icon */
.grey {
  color: var(--draft-history-entry-grey-color);
}

.green {
  color: var(--draft-history-entry-green-color);
}

.red {
  color: var(--draft-history-entry-red-color);
}

/* Styling for the error details table */
.mat-column-heading {
  font-weight: bolder;
}

.new-formatting-options-notice {
  margin-top: 7px;
}

.new-and-arrow-wrapper {
  display: inline-flex;
  align-items: baseline;
}

.new-arrow {
  padding-right: 0.5rem;
  align-self: end;
}

.new-label {
  color: var(--draft-history-entry-new-label-color);
  font-weight: 500;
}

